lib/tests/fixtures/compiler/evaluation/new_invalid_param_integer.pp
notice Integer[0, 100]('1000')
